--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
@@ -2,30 +2,33 @@
 	  height: 100%;
 	  width: 100%;
 	  margin: 0;
+	  
 	}
 	
 	.container {
+	  position: relative;
 	  display: flex;
 	  justify-content: center;
-	  align-items: center;
-	  height: 100%;
+	  align-items: flex-start;
 	  width: 100%;
+	  min-width: 100%;
 	  background: linear-gradient(to right, #3333ff 0%, rgba(255, 255, 255, 0.2) 18%, 
 	  									    rgba(255, 255, 255, 0.2) 82%, #3333ff 100%);
 	}
 	
 	.content {
 	  width: 1400px;
-	  min-width: 50%;
+	  min-width: 40%;
+	  max-width: 100%;
 	  height: 100%;
+	  min-height: 100%;
 	  background-color: rgb(204, 204, 255);
-	  position: absolute;
 	}
 	
 	#topHeader {
 		height: 100px;
 		width: 1396px;
-		min-width: 50%;
+		min-width: 99%;
 		position: relative;
 		
 		display: flex;
@@ -443,7 +446,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		border: 2px solid black;
+		border: 1px solid black;
 		cursor: pointer;
 	}
 		#hiddenMisc {
@@ -463,6 +466,7 @@
 		}
 	
 	#spaceBetween {
+		margin-left: 10px;
 		width: 1%;
 		height: 90%;
 		display: flex;
