--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/home.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/home.css
@@ -3,7 +3,7 @@
 	#pageBody {
 		width: 1400px;
 	    min-width: 50%;
-		height: 88%;
+		height: 1360px;
 		margin: 0 auto;
 	}
 	
@@ -73,46 +73,80 @@
 				width: 100%;
 		      	height: 25%;
 		      	font-size: 30px;
-		      	padding-left: 0px;
+		      	padding-left: 5px;
 		      	border: 1px solid gray;
 		      	border-radius: 5px;
 		     	outline: none;
-		      	background-color: rgb(0, 0, 56);
+		      	background-color: rgb(0, 0, 230);
 			  	color: rgb(255, 255, 102);
 			  	
 			  	display: flex;
 			    align-items: center;
-			    text-align: center;
 			    justify-content: center;
 			}
+				#userSearchInput::placeholder {
+					color: rgb(255, 255, 102);
+				}
 		
 		
 		#foodCategories {
 			display: flex;
+			flex-direction: column;
 			width: 1400px;
 		    min-width: 50%;
-			height: 88%;
+			height: 88.5%;
+			
+			align-items: center;
+    		text-align: center;
 		}
 		
-			#foodCategories-col1 {
-				width: 100%;
+			#foodCategories-col {
+				width: 95%;
 				height: 400px;
 				
 				display: flex;
-				background-color: red;
-			
+			    align-items: center;
+			    
 			}
 			
-				#category1 {
-					width: 33%;
+				#category {
+					width: 33.33%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					margin: auto;
 				}
-				#category2 {
-					width: 34%;
-				}
-				#category3 {
-					width: 33%;
-				}
-		
+					#categoryBorder{
+						height: 90%;
+						width: 95%;
+						
+						background-color: rgb(255, 255, 153);
+					   	border-radius: 10px;
+					  	display: flex;
+					  	justify-content: center;
+					  	align-items: center;
+					  	border: 2px solid black;
+					  	
+					  	flex-direction: column;
+					}
+				
+						#categoryImgDiv {
+							padding-top: 10px;
+							width: 380px;
+  							height: 310px;
+						}
+							#categoryImg {
+							  	width: 100%;
+							  	height: 100%;
+							  	
+							  	border-radius: 10px;
+							  	border: 2px solid black;
+							}
+						#categoryItemName {
+							padding-top: 8px;
+							font-size: 30px;
+							text-align: center;
+						}
 		
 		
 		
