categoryPage and itemPage styles-format

--- a/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
@@ -101,7 +101,7 @@
    			</div>
    			
    			<div id="foodItems">
-   				<div id="foodItems-col">
+   				<div id="foodItems-row">
    				
    					<div id="item">
    						<div id="itemBorder">
@@ -138,7 +138,7 @@
    					
    				</div>
    					
-   				<div id="foodItems-col">
+   				<div id="foodItems-row">
    				
    					<div id="item">
    						<div id="itemBorder">
@@ -167,18 +167,16 @@
    			</div>
    				
    				
-   			
-   		</div>
-   	
-   	
-   		<div id="socialLinksBorder">
+   			<div id="socialLinksBorder">
 		     	<div id="socialLinks">
 		            <b> 
 		            	<a id="gitHub" href="https://github.com/Nathan-Barthen" target="_blank">GitHub</a>
 		                <a id="linkedIn" href="https://www.linkedin.com/in/nathan-barthen-22993722a/" target="_blank">LinkedIn</a> 
 		            </b>
 		        </div>
-		</div>
+			</div>
+   			
+   		</div>
    	
    	</div>
   </div>
@@ -193,16 +191,13 @@
 	<script src="/javaScript/menuOptions/showDrinks.js"></script>
 	<script src="/javaScript/menuOptions/showMisc.js"></script>
 	
-	
+	<script src="/javaScript/bodySize-categoryPage.js"></script>
 	
 	<script src="/javaScript/entersLocation.js"></script>
 	<script src="/javaScript/errorRedirectPopup.js"></script>
 	
 	
-	<script>
-	const foodItemsCols = document.querySelectorAll('#foodItems-col');
-const height = 200 + (400 * foodItemsCols.length);
-document.querySelector('#pageBody').style.height = height + 'px';</script>
+	
 	
 </body>
 </html>
