--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/backgroundAndTopBar.css
@@ -2,7 +2,9 @@
 	  height: 100%;
 	  width: 100%;
 	  margin: 0;
-	  
+	  background: url(/images/blueGradiant.png) no-repeat center center fixed;
+  	  background-size: cover;
+  	  
 	}
 	
 	.container {
@@ -10,19 +12,24 @@
 	  display: flex;
 	  justify-content: center;
 	  align-items: flex-start;
+	  
 	  width: 100%;
 	  min-width: 100%;
-	  background: linear-gradient(to right, #3333ff 0%, rgba(255, 255, 255, 0.2) 18%, 
-	  									    rgba(255, 255, 255, 0.2) 82%, #3333ff 100%);
+	  
+	  height: 100%;
+	  min-height: 100%;
 	}
 	
 	.content {
 	  width: 1400px;
-	  min-width: 40%;
 	  max-width: 100%;
+	  
 	  height: 100%;
 	  min-height: 100%;
-	  background-color: rgb(204, 204, 255);
+	  
+	  background: url(/images/lightBlueBackgrd.png) no-repeat center center fixed;
+  	   background-size: cover;
+	  
 	}
 	
 	#topHeader {
