--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/home.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/home.css
@@ -2,9 +2,13 @@
 	
 	#pageBody {
 		width: 1400px;
-	    min-width: 50%;
+	    min-width: 99%;
 		height: 1360px;
+		min-height: 100%;
 		margin: 0 auto;
+	    	
+		background: url(/images/lightBlueBackgrd.png) no-repeat center center fixed;
+  	    background-size: cover;
 	}
 	
 	#body-headers {
@@ -93,14 +97,14 @@
 			display: flex;
 			flex-direction: column;
 			width: 1400px;
-		    min-width: 50%;
+		    min-width: 100%;
 			height: 88.5%;
 			
 			align-items: center;
     		text-align: center;
 		}
 		
-			#foodCategories-col {
+			#foodCategories-row {
 				width: 95%;
 				height: 400px;
 				
