--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/itemPage.css
@@ -33,7 +33,7 @@
 			padding-left: 15px;
 		}
 		
-		#menuTitle {
+		#categoryTitle {
 			width: 34%;
 			height: 100%;
 			
@@ -93,66 +93,87 @@
 				}
 		
 		
-		#foodItems {
-			display: flex;
-			flex-direction: column;
-			width: 1400px;
-		    min-width: 100%;
-			height: 88.5%;
+		#imageAndDesc {
+			width: 100%;
+			height: 400px;
 			
-			align-items: center;
-    		text-align: center;
+			display: flex;
 		}
-		
-			#foodItems-row {
-				width: 95%;
-				height: 400px;
+			#itemImgDiv {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				
+				width: 50%;
+				height: 100%;
+			}
+				#itemImg {
+					width: 400px;
+				  	height: 350px;
+				  	
+				  	border-radius: 10px;
+				  	border: 2px solid black;			
+				
+				}
+			#itemDescDiv{
+				width: 50%;
+				height: 100%;
 				
 				display: flex;
-			    align-items: center;
-			    
+				flex-direction: column;
+				
 			}
-			
-				#item {
-					width: 33.33%;
+				#itemName {
+					height: 30%;
+					width: 100%;
+					
 					display: flex;
 					justify-content: center;
-					align-items: center;
-					margin: auto;
+					align-items: flex-end;
+					
+					font-size: 50px;
+					text-decoration: underline;
+					text-decoration-color: blue;
 				}
-					#itemBorder{
-						height: 370px;
-						width: 95%;
-						
-						background-color: rgb(255, 187, 153);
-					   	border-radius: 10px;
-					  	display: flex;
-					  	justify-content: center;
-					  	align-items: center;
-					  	border: 2px solid black;
-					  	
-					  	flex-direction: column;
-					}
+				#itemDesc {
+					height: 70%;
+					width: 100%;
+					
+					display: flex;
+					justify-content: center;
+					align-items: flex-start;
+					
+					padding-top: 40px;
+					
+					font-size: 40px;
+				}
+		
+		#mainOptions {
+			width: 100%;
+			height: 100px;
+			
+			margin-top: 20px;
+		}
+			#mainOption-dropDown {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+				#labelName {
+					font-size: 40px;
+					padding-right: 10px;
+				}
+				#selectionTypes {
+					font-size: 40px;
+					background-color: rgb(255, 187, 153);
+					color: black;
+				  	padding-left: 5px;
+				  	
+					border-radius: 10px;
+				  	border: 3px solid black;	
+				  	
+				}
 				
-						#itemImgDiv {
-							padding-top: 10px;
-							width: 340px;
-  							height: 280px;
-						}
-							#itemImg {
-							  	width: 100%;
-							  	height: 100%;
-							  	
-							  	border-radius: 10px;
-							  	border: 2px solid black;
-							}
-						#itemItemName {
-							padding-top: 8px;
-							font-size: 30px;
-							text-align: center;
-							color: rgb(51, 51, 255);
-						}
-		
-		
-		
+				
+			
 		
